fix font size on mobile

--- a/src/04/content.css
+++ b/src/04/content.css
@@ -103,7 +103,7 @@
 
 }
 
-@container post-viewer (min-width: 0px) { .S6, .S7TEXT { font-size: clamp(0.50rem, 2.25cqw, 1.35rem); } }
+@container post-viewer (min-width: 0px) { .S6, .S7TEXT { font-size: clamp(0.40rem, 2.25cqw, 1.35rem); } }
 @container post-viewer (min-width: 0px) { .S6TRAD, .S7TEXT-TRAD { font-size: 1rem; } }
 
 @media (max-width: 500px) { .S6, .S6TRAD, .S7TEXT, .S7TEXT-TRAD { padding: 0.2rem 0.4rem 0rem 0.4rem; } }
